--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord-gamecord": "^4.4.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "mongoose": "^8.2.3",
     "nodemon": "^3.1.0"
   }
 }
