--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^1.7.0",
-    "discord-gamecord": "^4.4.1",
+    "@discordjs/rest": "^2.2.0",
+    "axios": "^1.6.8",
+    "discord-cloner": "^1.1.5",
+    "discord-gamecord": "^4.4.2",
+    "discord-giveaways": "^6.0.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "mongoose": "^8.2.3",
+    "ms": "^2.1.3",
     "nodemon": "^3.1.0"
   }
 }
