--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "discord-giveaways": "^6.0.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "emoji-aware": "^3.1.0",
     "mongoose": "^8.2.3",
     "ms": "^2.1.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "superagent": "^8.1.2"
   }
 }
