--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@discordjs/builders": "^1.7.0",
     "@discordjs/rest": "^2.2.0",
     "axios": "^1.6.8",
+    "captcha-canvas": "^3.2.2",
     "discord-cloner": "^1.1.5",
     "discord-gamecord": "^4.4.2",
     "discord-giveaways": "^6.0.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "emoji-aware": "^3.1.0",
-    "mongoose": "^8.2.3",
+    "mongoose": "^6.0.12",
     "ms": "^2.1.3",
     "nodemon": "^3.1.0",
     "superagent": "^8.1.2"
