--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "functions": {
         "api/*.js": {
             "memory": 128,
-            "maxduration": 10
+            "maxDuration": 10
         }
     },
     "redirects": [
